#18757 closed bug (fixed)

[desklink] icons do not resize in Deskbar

Reported by: shaka Owned by: stippi
Priority: normal Milestone: R1/beta5
Component: User Interface Version: R1/beta4
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by shaka)

I'm using the Deskbar Tray area as a dock via desklink in my boot script. Works great except the icons are too small, and when I resize the icons via Preferences->Appearance->Bold Font (strange..) all other icons increase size except those added with desklink.

It seems desklink uses the minimal icon size (as shown in Icon-O-Matic). Restarting Deskbar removes desklink icons.

I've included some example pictures.

Attachments (3)

deskbar.jpg (8.8 KB ) - added by shaka 15 months ago.
prefs.jpg (77.1 KB ) - added by shaka 15 months ago.
SmallestIcon.bmp (22.4 KB ) - added by shaka 15 months ago.

Download all attachments as: .zip

Change History (7)

by shaka, 15 months ago

Attachment: deskbar.jpg added

by shaka, 15 months ago

Attachment: prefs.jpg added

by shaka, 15 months ago

Attachment: SmallestIcon.bmp added

comment:1 by shaka, 15 months ago

Description: modified (diff)

comment:2 by shaka, 15 months ago

Description: modified (diff)

comment:3 by waddlesplash, 15 months ago

Keywords: Deskbar desklink icon size removed
Summary: Desklink icons do not resize in Deskbar[desklink] icons do not resize in Deskbar

comment:4 by waddlesplash, 15 months ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: newclosed

Fixed in hrev57549.

Note: See TracTickets for help on using tickets.