desklink: Size custom items based on Deskbar's current icon size.

Fixes #18757.